--- a/EasyNote/EasyNote.csproj
+++ b/EasyNote/EasyNote.csproj
@@ -176,13 +176,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\IdentityHelpers.cs" />
-    <Compile Include="Migrations\202103250937117_Initial.cs" />
-    <Compile Include="Migrations\202103250937117_Initial.Designer.cs">
-      <DependentUpon>202103250937117_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202103260705106_AuthorRequired.cs" />
-    <Compile Include="Migrations\202103260705106_AuthorRequired.Designer.cs">
-      <DependentUpon>202103260705106_AuthorRequired.cs</DependentUpon>
+    <Compile Include="Migrations\202103290903428_Ilk.cs" />
+    <Compile Include="Migrations\202103290903428_Ilk.Designer.cs">
+      <DependentUpon>202103290903428_Ilk.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -217,6 +213,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\logo.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -314,11 +311,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202103250937117_Initial.resx">
-      <DependentUpon>202103250937117_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202103260705106_AuthorRequired.resx">
-      <DependentUpon>202103260705106_AuthorRequired.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202103290903428_Ilk.resx">
+      <DependentUpon>202103290903428_Ilk.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
