--- a/EasyNote/Web.config
+++ b/EasyNote/Web.config
@@ -26,7 +26,7 @@
 			</smtp>
 		</mailSettings>
 	</system.net>
-	<appSettings>
+	<appSettings file="../AppSettingsSecrets.config">
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
