--- a/EasyNote/Web.config
+++ b/EasyNote/Web.config
@@ -8,7 +8,7 @@
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
-	<connectionStrings>
+	<connectionStrings configSource="">
 		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EasyNoteDb;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<!--https://docs.microsoft.com/en-us/dotnet/framework/configure-apps/file-schema/network/smtp-element-network-settings-->
@@ -18,8 +18,6 @@
 			<smtp deliveryMethod="Network" deliveryFormat="SevenBit"  from="easynote@berdanasen.online">
 				<network
 				  host="berdanasen.online"
-				  userName="easynote@berdanasen.online"
-				  password="*******"
 				  port="587"
 				  enableSsl="true"
         />
